Select fixes for Custom/Native and scrollbar

--- a/src/components/CustomSelect/CustomSelect.css
+++ b/src/components/CustomSelect/CustomSelect.css
@@ -37,19 +37,23 @@
   cursor: pointer;
 }
 
-/* Customize website's scrollbar like Mac OS
-Not supports in Firefox and IE */
+/*
+  Custom, think, mobile like scrollbar using,
+  -webkit proprietary element and spec scrollbar-width/color
+*/
 
 .CustomSelect__scrollable {
   min-height: 44px;
   max-height: 160px;
   overflow-y: auto;
+  scrollbar-color: var(--field_border) transparent;
+  scrollbar-width: thin;
 }
 
 /* total width */
 .CustomSelect__scrollable::-webkit-scrollbar {
   background-color: var(--modal_card_background);
-  width: 6px;
+  width: 8px;
 }
 
 /* background of the scrollbar except button or resizer */
@@ -60,13 +64,13 @@ Not supports in Firefox and IE */
 /* scrollbar itself */
 .CustomSelect__scrollable::-webkit-scrollbar-thumb {
   background-color: var(--field_border);
-  border-radius: 3px;
+  border-radius: 4px;
   border: 1px solid var(--modal_card_background);
   min-height: 44px;
 }
 
 /* scrollbar itself */
-.CustomSelect__scrollable:hover::-webkit-scrollbar-thumb {
+.CustomSelect__scrollable::-webkit-scrollbar-thumb:hover {
   background-color: var(--field_border_hover);
 }
 
